--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "oicq": "^1.19.4"
+    "oicq": "^2.0.6-beta"
   },
   "devDependencies": {
-    "@types/node": "^16.4.13"
+    "@types/node": "^16.6.1"
   }
 }
