--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "oicq-template",
+  "name": "oicq-startup-template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "node ./index.js"
+    "debug:watch": "nodemon",
+    "debug": "node --inspect -r ts-node/register ./src/index.ts",
+    "build": "tsc -p ./tsconfig.json",
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
+    "test": "jest -i"
   },
+  "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "oicq": "^2.1.4"
+    "oicq": "^2.1.8"
   },
   "devDependencies": {
-    "@types/node": "^16.6.1"
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
